// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Empty matches snapshot 1`] = `
<div
  className="Section Section-Normal Section-Left-Aligned"
/>
`;

exports[`Section Left-aligned with className matches snapshot 1`] = `
<div
  className="className Section Section-Normal Section-Left-Aligned"
/>
`;

exports[`Section Leftaligned with className matches snapshot 1`] = `
<div
  className="className Section Section-Normal Section-Left-Aligned"
/>
`;

exports[`Section With className matches snapshot 1`] = `
<div
  className="className Section Section-Normal Section-Left-Aligned"
/>
`;
